student api mostly implemented